Fix logo on mobile sizes

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -121,19 +121,13 @@ body {
   padding: 0.25rem;
 }
 
-.md-header__button.md-logo img, .md-header__button.md-logo svg {
+.md-header__button.md-logo img,
+.md-header__button.md-logo svg {
   height: 1.75rem;
 }
 
 [dir=ltr] .md-header__title {
   margin-left: 0;
-}
-
-@media screen and (max-width: 76.1875em) {
-  .md-nav--primary .md-nav__title[for="__drawer"] {
-    height: auto;
-    padding-top: 0;
-  }
 }
 
 /* Details element */
